--- a/.github/workflows/run_deploy.yml
+++ b/.github/workflows/run_deploy.yml
@@ -19,6 +19,7 @@ jobs:
       - run: npm i --location=global yarn
       - run: yarn install --frozen-lockfile
       - run: yarn test
+      - run: yarn test:ui-jest
 
   deploy:
     name: "Deploy"
